# vibe-function-collapse

./: .gitignore  PLAN.md  README.md  index.html
.github/workflows/: deploy.yml
.kiro/specs/wfc-web-app/: design.md  requirements.md  tasks.md
assets/: index-CtcrUTNB.js  index-DgxoAVTZ.css  index-KiZQW-oe.js  wfc_core_bg-DnDOZQsF.wasm
core/: Cargo.toml
core/proptest-regressions/: model.txt
core/src/: error.rs  lib.rs  model.rs  ruleset.rs  wasm.rs
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.css  App.tsx
web/src/components/: CanvasRenderer.css  CanvasRenderer.tsx  ExportPanel.css  ExportPanel.tsx  GenerationPanel.tsx  MainControls.tsx  NotificationToast.tsx  ProjectGallery.css  ProjectGallery.tsx  RuleEditor.tsx  SocketManager.tsx  TileEditor.tsx  TileManager.tsx  TileSocketEditor.tsx
web/src/store/: README.md  appStore.test.ts  appStore.ts
web/src/types/: index.ts
web/src/utils/: projectIO.ts  storage.ts  symmetry.ts  wasmBridge.test.ts  wasmBridge.ts
web/tests/property/: generation-config.test.ts  project-persistence.test.ts  socket-rules.test.ts  tile-management.test.ts
